--- a/book/pom.xml
+++ b/book/pom.xml
@@ -36,7 +36,7 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
     <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <module.name>com.semanticcms.news.servlet.book</module.name>
-    <subproject.subpath>devel/</subproject.subpath>
+    <subproject.subpath>book/</subproject.subpath>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-news-servlet</documented.artifactId>
     <documented.name>SemanticCMS News Servlet</documented.name>
