--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,12 +29,12 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     <relativePath>../../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-news-servlet-book</artifactId><version>1.7.1</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-news-servlet-book</artifactId><version>1.7.1-POST-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
     <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
-    <project.build.outputTimestamp>2023-09-24T07:18:10Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <module.name>com.semanticcms.news.servlet.book</module.name>
     <subproject.subpath>book/</subproject.subpath>
     <!-- These values are copied from the project being documented -->
@@ -82,7 +82,7 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     <connection>scm:git:git://github.com/ao-apps/semanticcms-news-servlet.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/semanticcms-news-servlet.git</developerConnection>
     <url>https://github.com/ao-apps/semanticcms-news-servlet</url>
-    <tag>semanticcms-news-servlet-book-1.7.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
