--- a/pom.xml
+++ b/pom.xml
@@ -402,6 +402,9 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
       </dependency>
       <!-- javaee-web-api-bom: <groupId>javax.el</groupId><artifactId>javax.el-api</artifactId> -->
       <dependency>
+        <groupId>com.google.code.findbugs</groupId><artifactId>jsr305</artifactId><version>3.0.2</version>
+      </dependency>
+      <dependency>
         <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-taglib</artifactId><version>1.16.0${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
